--- a/src/main/resources/templates/viewall.html
+++ b/src/main/resources/templates/viewall.html
@@ -7,6 +7,7 @@
 <body>
 	
 	<span th:each="name : ${names}">
+		<video th:src="@{/uploads/} + ${name}" height="200px" width="150px"></video>
 		<img alt="" th:src="@{/uploads/} + ${name}"
 			height="200px" width="150px">
 	</span>	
